Remove tests hihi